--- a/src/Yttrium.IisDeploy/Yttrium.IisDeploy.csproj
+++ b/src/Yttrium.IisDeploy/Yttrium.IisDeploy.csproj
@@ -5,8 +5,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
-    
-    
+
+    <!-- Meta -->
+    <Authors>Filipe Toscano</Authors>
+    <Copyright>Copyright © Filipe Toscano 2023</Copyright>
+    <PackageProjectUrl>https://github.com/filipetoscano/iisdeploy</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/filipetoscano/iisdeploy</RepositoryUrl>
+    <PackageTags>iis</PackageTags>
+
+    <!-- Package -->
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
