--- a/src/Yttrium.IisDeploy/Yttrium.IisDeploy.csproj
+++ b/src/Yttrium.IisDeploy/Yttrium.IisDeploy.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
 
     <!-- Meta -->
     <Authors>Filipe Toscano</Authors>
-    <Copyright>Copyright © Filipe Toscano 2023</Copyright>
+    <Copyright>Copyright © Filipe Toscano 2023-2024</Copyright>
     <PackageProjectUrl>https://github.com/filipetoscano/iisdeploy</PackageProjectUrl>
     <RepositoryUrl>https://github.com/filipetoscano/iisdeploy</RepositoryUrl>
     <PackageTags>iis</PackageTags>
@@ -18,11 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CliWrap" Version="3.6.4" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="CliWrap" Version="3.6.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0" />
-    <PackageReference Include="System.Text.Json" Version="7.0.3" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
