--- a/src/IisDeploy/IisDeploy.csproj
+++ b/src/IisDeploy/IisDeploy.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ConfigureCommand.cs" />
     <Compile Include="GetCommand.cs" />
     <Compile Include="DeployCommand.cs" />
+    <Compile Include="Format.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ColorCommand.cs" />
@@ -76,23 +77,29 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CliWrap">
+      <Version>3.7.1</Version>
+    </PackageReference>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils">
       <Version>4.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>9.0.0</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>9.0.0</Version>
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Serilog">
-      <Version>4.1.0</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Extensions.Logging">
-      <Version>8.0.0</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.Console">
       <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json">
+      <Version>9.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
