--- a/src/IisDeploy/IisKnife.csproj
+++ b/src/IisDeploy/IisKnife.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{26D264F2-575E-4C56-8C6D-2497D55341FA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>IisDeploy</RootNamespace>
-    <AssemblyName>iisdeploy</AssemblyName>
+    <RootNamespace>IisKnife</RootNamespace>
+    <AssemblyName>iisknife</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>IisDeploy.Program</StartupObject>
+    <StartupObject>IisKnife.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>app.ico</ApplicationIcon>
